add segunda remessa de palestrantes

--- a/index.html
+++ b/index.html
@@ -333,30 +333,90 @@
             </div>
             <br>
 
+            <!-- Palestrantes 1 -->
+
+            <div class="row">
+
+                <div class="col s12 m3 center hoverable" id="card-speaker">
+                  <div class="col s12 m12">
+                    <img src="images/speakers/DaianeAlves.webp"
+                      title="Foto da palestrante arretada Daiane Alves"
+                      alt="Foto da palestrante arretada Daiane Alves"
+                      width="80%"
+                      id="img-speakers"
+                      >
+                      <h5><span class="span-speaker-default">Daiane Alves</span></h5>
+                      <h6>Rio de Janeiro - RJ</h6>
+                  </div>
+                </div>
+
+                <div class="col s12 m3 center hoverable" id="card-speaker">
+                  <div class="col s12 m12">
+                    <img src="images/speakers/ViniciusCampitelli.webp"
+                      title="Foto do palestrante invocado Vinicius Campitelli"
+                      alt="Foto do palestrante invocado Vinicius Campitelli"
+                      width="80%"
+                      id="img-speakers"
+                      >
+                      <h5><span class="span-speaker-default">Vinicius Campitelli</span></h5>
+                      <h6>São Paulo - SP</h6>
+                  </div>
+                </div>
+
+
+                <div class="col s12 m3 center hoverable" id="card-speaker">
+                  <div class="col s12 m12">
+                    <img src="images/speakers/RosanaMarques.webp"
+                      title="Foto da palestrante roxeda Rosana Marques"
+                      alt="Foto da palestrante roxeda Rosana Marques"
+                      width="80%"
+                      id="img-speakers"
+                      >
+                      <h5><span class="span-speaker-default">Rosana Marques</span></h5>
+                      <h6>Fortaleza - CE</h6>
+                  </div>
+                </div>
+
+                <div class="col s12 m3 center hoverable" id="card-speaker">
+                  <div class="col s12 m12">
+                    <img src="images/speakers/EvaldoBarbosa.webp"
+                      title="Foto do palestrante desenrolado Evaldo Barbosa"
+                      alt="Foto do palestrante desenrolado Evaldo Barbosa"
+                      width="80%"
+                      id="img-speakers"
+                      >
+                      <h5><span class="span-speaker-default">Evaldo Barbosa</span></h5>
+                      <h6>São Luíz - MA</h6>
+                  </div>
+                </div>
+
+            </div>
+            <!-- palestrantes 2 -->
+
             <div class="row">
 
               <div class="col s12 m3 center hoverable" id="card-speaker">
                 <div class="col s12 m12">
-                  <img src="images/speakers/DaianeAlves.webp"
-                    title="Foto da palestrante arretada Daiane Alves"
-                    alt="Foto da palestrante arretada Daiane Alves"
+                  <img src="images/speakers/VicenteMartins.webp"
+                    title="Foto do palestrante arretado Vicente Martins"
+                    alt="Foto do palestrante arretado Vicente Martins"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h5><span class="span-speaker-default">Daiane Alves</span></h5>
-                    <h6>Rio de Janeiro - RJ</h6>
+                    <h5><span class="span-speaker-default">Vicente Martins</span></h5>
+                    <h6>João Pessoa - PB</h6>
                 </div>
               </div>
 
               <div class="col s12 m3 center hoverable" id="card-speaker">
                 <div class="col s12 m12">
-                  <img src="images/speakers/ViniciusCampitelli.webp"
-                    title="Foto do palestrante invocado Vinicius Campitelli"
-                    alt="Foto do palestrante invocado Vinicius Campitelli"
+                  <img src="images/speakers/MonicaCraveiro.webp"
+                    title="Foto da palestrante invocada Monica Craveiro"
+                    alt="Foto da palestrante invocada Monica Craveiro"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h5><span class="span-speaker-default">Vinicius Campitelli</span></h5>
+                    <h5><span class="span-speaker-default">Monica Craveiro</span></h5>
                     <h6>São Paulo - SP</h6>
                 </div>
               </div>
@@ -364,33 +424,31 @@
 
               <div class="col s12 m3 center hoverable" id="card-speaker">
                 <div class="col s12 m12">
-                  <img src="images/speakers/RosanaMarques.webp"
-                    title="Foto da palestrante roxeda Rosana Marques"
-                    alt="Foto da palestrante roxeda Rosana Marques"
+                  <img src="images/speakers/VitorMattos.webp"
+                    title="Foto d0 palestrante roxeda Vitor Mattos"
+                    alt="Foto d0 palestrante roxeda Vitor Mattos"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h5><span class="span-speaker-default">Rosana Marques</span></h5>
-                    <h6>Fortaleza - CE</h6>
+                    <h5><span class="span-speaker-default">Vitor Mattos</span></h5>
+                    <h6>Rio de Janeiro - RJ</h6>
                 </div>
               </div>
 
               <div class="col s12 m3 center hoverable" id="card-speaker">
                 <div class="col s12 m12">
-                  <img src="images/speakers/EvaldoBarbosa.webp"
-                    title="Foto do palestrante desenrolado Evaldo Barbosa"
-                    alt="Foto do palestrante desenrolado Evaldo Barbosa"
+                  <img src="images/speakers/SandraRayane.webp"
+                    title="Foto da palestrante desenrolada Sandra Rayane"
+                    alt="Foto da palestrante desenrolada Sandra Rayane"
                     width="80%"
                     id="img-speakers"
                     >
-                    <h5><span class="span-speaker-default">Evaldo Barbosa</span></h5>
-                    <h6>São Luíz - MA</h6>
+                    <h5><span class="span-speaker-default">Sandra Rayane</span></h5>
+                    <h6>Fortaleza - CE</h6>
                 </div>
               </div>
 
-
-
-            </div>
+          </div>
 
           </div>
         </div>
