add terceira remessa de palestrantes

--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
               <div class="col s12 m3 center hoverable" id="card-speaker">
                 <div class="col s12 m12">
                   <img src="images/speakers/VitorMattos.webp"
-                    title="Foto d0 palestrante roxeda Vitor Mattos"
-                    alt="Foto d0 palestrante roxeda Vitor Mattos"
+                    title="Foto do palestrante roxeda Vitor Mattos"
+                    alt="Foto do palestrante roxeda Vitor Mattos"
                     width="80%"
                     id="img-speakers"
                     >
@@ -449,6 +449,65 @@
               </div>
 
           </div>
+
+          <!-- Palestrantes 3 -->
+
+          <div class="row">
+
+            <div class="col s12 m3 center hoverable" id="card-speaker">
+              <div class="col s12 m12">
+                <img src="images/speakers/IngriddosSantos.webp"
+                  title="Foto da palestrante arretada Ingrid Santos"
+                  alt="Foto da palestrante arretada Ingrid Santos"
+                  width="80%"
+                  id="img-speakers"
+                  >
+                  <h5><span class="span-speaker-default">Ingrid Santos</span></h5>
+                  <h6>Fortaleza - CE</h6>
+              </div>
+            </div>
+
+            <div class="col s12 m3 center hoverable" id="card-speaker">
+              <div class="col s12 m12">
+                <img src="images/speakers/AthosRibeiro.webp"
+                  title="Foto do palestrante invocado Athos Ribeiro"
+                  alt="Foto do palestrante invocado Athos Ribeiro"
+                  width="80%"
+                  id="img-speakers"
+                  >
+                  <h5><span class="span-speaker-default">Athos Ribeiro</span></h5>
+                  <h6>Marechal Deodoro - AL</h6>
+              </div>
+            </div>
+
+
+            <div class="col s12 m3 center hoverable" id="card-speaker">
+              <div class="col s12 m12">
+                <img src="images/speakers/LiviaCarolina.webp"
+                  title="Foto da palestrante roxeda Lívia Carolina"
+                  alt="Foto da palestrante roxeda Lívia Carolina"
+                  width="80%"
+                  id="img-speakers"
+                  >
+                  <h5><span class="span-speaker-default">Lívia Carolina</span></h5>
+                  <h6>Rio de Janeiro - RJ</h6>
+              </div>
+            </div>
+
+            <div class="col s12 m3 center hoverable" id="card-speaker">
+              <div class="col s12 m12">
+                <img src="images/speakers/YanVancelis.webp"
+                  title="Foto do palestrante desenrolado Yan Vancelis"
+                  alt="Foto do palestrante desenrolado Yan Vancelis"
+                  width="80%"
+                  id="img-speakers"
+                  >
+                  <h5><span class="span-speaker-default">Yan Vancelis</span></h5>
+                  <h6>Quixadá - CE</h6>
+              </div>
+            </div>
+
+        </div>
 
           </div>
         </div>
