add quarta remessa de palestrantes

--- a/index.html
+++ b/index.html
@@ -509,6 +509,65 @@
 
         </div>
 
+        <!-- Palestrantes 4 -->
+
+        <div class="row">
+
+          <div class="col s12 m3 center hoverable" id="card-speaker">
+            <div class="col s12 m12">
+              <img src="images/speakers/BrunoLopes.webp"
+                title="Foto do palestrante arretado Bruno Lopes"
+                alt="Foto do palestrante arretado Bruno Lopes"
+                width="80%"
+                id="img-speakers"
+                >
+                <h5><span class="span-speaker-default">Bruno Lopes</span></h5>
+                <h6>Fortaleza - CE</h6>
+            </div>
+          </div>
+
+          <div class="col s12 m3 center hoverable" id="card-speaker">
+            <div class="col s12 m12">
+              <img src="images/speakers/HelenaSaminez.webp"
+                title="Foto da palestrante invocada Helena Saminez"
+                alt="Foto da palestrante invocada Helena Saminez"
+                width="80%"
+                id="img-speakers"
+                >
+                <h5><span class="span-speaker-default">Helena Saminez</span></h5>
+                <h6>São Luís - MA</h6>
+            </div>
+          </div>
+
+
+          <div class="col s12 m3 center hoverable" id="card-speaker">
+            <div class="col s12 m12">
+              <img src="images/speakers/AndersonAragao.webp"
+                title="Foto do palestrante roxeda Anderson Aragão"
+                alt="Foto do palestrante roxeda Anderson Aragão"
+                width="80%"
+                id="img-speakers"
+                >
+                <h5><span class="span-speaker-default">Anderson Aragão</span></h5>
+                <h6>João Pessoa - PB</h6>
+            </div>
+          </div>
+
+          <div class="col s12 m3 center hoverable" id="card-speaker">
+            <div class="col s12 m12">
+              <img src="images/speakers/HilderjaresMartins.webp"
+                title="Foto do palestrante desenrolado Hilderjares Martins"
+                alt="Foto do palestrante desenrolado Hilderjares Martins"
+                width="80%"
+                id="img-speakers"
+                >
+                <h5><span class="span-speaker-default">Hilderjares Martins</span></h5>
+                <h6>Iguatu - CE</h6>
+            </div>
+          </div>
+
+      </div>
+
           </div>
         </div>
 
