--- a/index.html
+++ b/index.html
@@ -784,11 +784,9 @@
           <div class="col s12 m12 center">
             <br><br>
 
-            <a class="waves-effect waves-light btn modal-trigger btn-large brown darken-2" href="#modal1">CÓDIGO DE CONDUTA</a>
-            <div id="modal1" class="modal modal-fixed-footer">
-              <div class="modal-content">
-                <h4>CÓDIGO DE CONDUTA</h4>
-                <p class="light flow-text" style="text-align: justify; font-size: 18px;">
+            <h3 class="center brown-text">CÓDIGO DE CONDUTA</h3>
+            <br>
+                <p class="light flow-text" style="text-align: justify; font-size: 20px;">
                   A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
                   identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
                   religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
@@ -826,12 +824,7 @@
                   <br>
     
                   Créditos e fonte original: PHPSP
-              </div>
-              <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
-              </div>
-            </div>
-            </div>
+            
           </div>
         </div>
       </div>
