--- a/index.html
+++ b/index.html
@@ -794,18 +794,14 @@
           <div class="col s12 m12 center">
             <br><br>
 
-            <a class="waves-effect waves-light btn modal-trigger btn-large brown darken-2" href="#modal1">CÓDIGO DE
-              CONDUTA</a>
+            <a class="waves-effect waves-light btn modal-trigger btn-large brown darken-2" href="#modal1">CÓDIGO DE CONDUTA</a>
             <div id="modal1" class="modal modal-fixed-footer">
               <div class="modal-content">
                 <h4>CÓDIGO DE CONDUTA</h4>
                 <p class="light flow-text" style="text-align: justify; font-size: 18px;">
-                  A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de
-                  gênero,
-                  identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade,
-                  origem ou
-                  religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos
-                  e
+                  A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
+                  identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
+                  religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
                   canais organizados pela comunidade. Linguagem e/ou exposição de imagens sexuais ou de cunho
                   discriminatório
                   não serão apropriadas no âmbito de nossa comunidade - isto inclui os eventos, as palestras,
@@ -854,11 +850,11 @@
                 <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceitar</a>
               </div>
             </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
   <div class="container">
     <div class="section" id="faq">
