add mais uma remessa de palestrantes

--- a/index.html
+++ b/index.html
@@ -585,6 +585,15 @@
                 </div>
               </div>
 
+              <div class="col s12 m3 center hoverable" id="card-speaker">
+                <div class="col s12 m12">
+                  <img src="images/speakers/RafaelNeris.webp" title="Foto do palestrante roxeda Rafael Neris"
+                    alt="Foto do palestrante roxeda Rafael Neris" width="80%" id="img-speakers">
+                  <h5><span class="span-speaker-default">Rafael Neris</span></h5>
+                  <h6>Osasco - SP</h6>
+                </div>
+              </div>
+
             </div>
 
           </div>
