adiciona patrocinador bronze

--- a/index.html
+++ b/index.html
@@ -726,19 +726,32 @@
             </div>
             <div class="row">
               <!--Patrocinio bronze-->
-              <div class="col s12 m4 center hoverable p-3" id="card-sponsor">
+              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
                 <h6><span class="span-speaker-default">Patrocinador Bronze</span></h6>
                 <br>
                 <img class="responsive-img" title="Logomarca da Me2 Softwares" alt="Logomarca da Me2 Softwares"
-                  src="images/sponsors/me2.webp" width="80%" />
+                  src="images/sponsors/me2.webp" width="70%" />
                 <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
                   <a target="_blank" style="margin-right: 50px;" href="https://instagram.com/me2softwares">Instagram</a>
                   <a target="_blank" href="https://me2.com.br">Website</a>
                 </div>
               </div>
 
+              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
+                <h6><span class="span-speaker-default">Patrocinador Bronze</span></h6>
+                <br>
+                <img class="responsive-img" title="Betho Costa" alt="Betho Costa"
+                  src="images/sponsors/BethoCosta.webp" width="35%" style="border-radius: .5rem;" id="img-speakers"/>
+                  <h5><span>Betho Costa</span></h5>
+                <div class="col l12 s12 brown-text" style="margin-top: 30px; margin-bottom: 30px;">
+                  <a target="_blank" style="margin-right: 50px;" href="https://www.instagram.com/heghbertho">Instagram</a>
+                  <a target="_blank" href="">Website</a>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <!--Patrocinio apoio institucional-->
-              <div class="col s12 m4 center hoverable p-3" id="card-sponsor">
+              <div class="col s12 m6 offset-m3 center hoverable p-3" id="card-sponsor">
                 <h6><span class="span-speaker-default">Apoio Institucional</span></h6>
                 <br>
                 <img class="responsive-img" title="Logomarca da Centro Universitário Estácio | Via Corpvs"
