adiciona logo comunidades pareiras

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
-                alt="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
-                src="images/comunidades/php-rn.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade Rapadura Tech"
+                alt="Logomarca da comunidade Rapadura Tech"
+                src="images/comunidades/rapadura-tech.webp" />
             </div>
           </div>
         </div>
@@ -181,13 +181,15 @@
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
-                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade PHP PB do Estado da Paraíba"
+                alt="Logomarca da comunidade PHP PB do Estado da Paraíba" src="images/comunidades/php-pb.webp" />
             </div>
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" src="images/comunidades/onde-codar.webp" />
+              <img class="responsive-img" title="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
+                alt="Logomarca da comunidade PHP RN do Estado do Rio Grande do Norte"
+                src="images/comunidades/php-rn.webp" />
             </div>
           </div>
           <div class="col s12 m4">
@@ -201,8 +203,9 @@
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
-              <img class="responsive-img" title="Logomarca da comunidade PHP PB do Estado da Paraíba"
-                alt="Logomarca da comunidade PHP PB do Estado da Paraíba" src="images/comunidades/php-pb.webp" />
+              <img class="responsive-img" title="Logomarca da Comunidade PHP do Estado de Minas Gerais"
+                alt="Logomarca da Comunidade PHP do Estado de Minas Gerais"
+                src="images/comunidades/php-mg.webp" />
             </div>
           </div>
           <div class="col s12 m4">
@@ -213,12 +216,32 @@
           </div>
           <div class="col s12 m4">
             <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da comunidade PHP SP do Estado de São Paulo"
+                alt="Logomarca da comunidade PHP SP do Estado de São Paulo" src="images/comunidades/php-sp.webp" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" src="images/comunidades/onde-codar.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade "
+                alt="Logomarca da Comunidade " src="images/comunidades/php-women.webp" />
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="icon-block">
               <img class="responsive-img" title="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe"
                 alt="Logomarca da Comunidade Vale Livre da região Vale do Jaguaribe"
                 src="images/comunidades/vale-livre.webp" />
             </div>
           </div>
         </div>
+      </div>
         <div class="row">
           <div class="col s12 m4">
             <div class="icon-block">
@@ -236,6 +259,14 @@
             <div class="icon-block">
               <img class="responsive-img" title="Logomarca da Comunidade Github Fortaleza"
                 alt="Logomarca da Comunidade Github Fortaleza" src="images/comunidades/github-fortaleza.webp" />
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="icon-block">
+              <img class="responsive-img" title="Logomarca da Comunidade Github Fortaleza"
+                alt="Logomarca da Comunidade Github Fortaleza" src="images/comunidades/react-ce.webp" />
             </div>
           </div>
         </div>
