adiciona titulo das palestras na programação de sexta

--- a/sexta.html
+++ b/sexta.html
@@ -180,7 +180,7 @@
                         />
                         <p class="speaker-name" style="font-size: 22px;">Fernando Santos</p>
                         <p class="speaker-location">João Pessoa - PB</p>
-                        <h6>Entendendo o Drupal como um Framework</h6>
+                        <h6>Lando para desenvolvedores PHP</h6>
                       </div>
                     </div>
                     <div class="col s12 m6 l6">
@@ -231,15 +231,15 @@
                       <div class="col s12 m6 offset-m3">
                         <img
                           class="responsive-img"
-                          src="images/speakers/AthosRibeiro.webp"
-                          title="Foto do palestrante invocado Athos Ribeiro"
-                          alt="Foto do palestrante invocado Athos Ribeiro"
+                          src="images/speakers/DanielLima.webp"
+                          title="Foto do palestrante invocado Daniel Lima"
+                          alt="Foto do palestrante invocado Daniel Lima"
                           id="img-speakers"
                           width="60%"
                         />
-                        <p class="speaker-name" style="font-size: 22px;">Athos Ribeiro</p>
-                        <p class="speaker-location">Marechal Deodoro - AL</p>
-                        <h6>Migrando suítes de testes para <em>PHPUnit 10</em></h6>
+                        <p class="speaker-name" style="font-size: 22px;">Daniel Lima</p>
+                        <p class="speaker-location">Russas - CE</p>
+                        <h6><em>Explorando a Web:</em> Construindo Crawlers eficientes com Symfony</h6>
                       </div>
                     </div>
                   </div>
@@ -299,15 +299,15 @@
                       <div class="col s12 m6 offset-m3">
                         <img
                           class="responsive-img"
-                          src="images/speakers/VicenteMartins.webp"
-                          title="Foto do palestrante arretado Vicente Martins"
-                          alt="Foto do palestrante arretado Vicente Martins"
+                          src="images/speakers/engenheira.coelho.webp"
+                          title="Foto do palestrante arretada Leticia Coelho"
+                          alt="Foto do palestrante arretada Leticia Coelho"
                           id="img-speakers"
                           width="60%"
                         />
-                        <p class="speaker-name" style="font-size: 22px;">Vicente Martins</p>
-                        <p class="speaker-location">João Pessoa - PB</p>
-                        <h6>Refactoring: <em>O que é, quando e como fazer</em></h6>
+                        <p class="speaker-name" style="font-size: 22px;">Leticia Coelho</p>
+                        <p class="speaker-location">Florianópolis - SC</p>
+                        <h6><em>HTML limpo,</em> um overview sobre os 04 pilares</h6>
                       </div>
                     </div>
                   </div>
@@ -315,7 +315,7 @@
                 <div id="time-9" class="col s12 z-depth-1">
                   <div class="row center" style="margin-top: 40px;">
                     <div class="col l12 s12">
-                      <h3 class="center brown-text">COFFEE BREAK</h3>
+                      <h3 class="center brown-text">MERENDA</h3>
                       <br><br>
                       <img class="responsive-img" title="Logomarca do evento PHPeste branca"
                         alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
@@ -345,7 +345,11 @@
                 <div id="time-12" class="col s12 z-depth-1">
                 <div class="row center" style="margin-top: 40px;">
                   <div class="col l12 s12">
-                    <h3 class="center brown-text">MESA REDONDA</h3>
+                    <h3 class="center brown-text">MESA REDONDA: <br>
+                      COMO VAI FICAR O MERCADO DE <br> DESENVOLVIMENTO DAQUI PARA FRENTE?
+                      <p><br> CONVIDADOS: Monica, Eduardo, Swoleo, Dennis Braga.
+                        <br> MEDIADOR: Wil Correa.</p>
+                    </h3>
                     <br><br>
                     <img class="responsive-img" title="Logomarca do evento PHPeste branca"
                       alt="Logomarca do evento PHPeste branca" src="images/phpeste_marrom.webp" />
@@ -363,8 +367,8 @@
                           <img
                           class="responsive-img"
                           src="images/speakers/engenheira.coelho.webp"
-                          title="Foto da palestrante arretada Daiane Alves"
-                          alt="Foto da palestrante arretada Daiane Alves"
+                          title="Foto da palestrante arretada Leticia Coelho"
+                          alt="Foto da palestrante arretada Leticia Coelho"
                           id="img-speakers"
                           width="70%"
                         />
