--- a/agenda.html
+++ b/agenda.html
@@ -157,7 +157,7 @@
                   </tr>
                   <tr>
                     <td class="time">09:00</td>
-                    <td>Palestra A1</td>
+                    <td style="font-size: 14px;">Código Mestre: <br> <em>A Arte de Evoluir <br> do Dev ao Tech Lead</em></td>
                     <td>
                       <img
                         src="images/speakers/LuizSiqueira.webp"
@@ -169,7 +169,7 @@
                       <br />
                       Luiz Siqueira
                     </td>
-                    <td>Palestra B1</td>
+                    <td style="font-size: 14px;">Observabilidade com <br> OpenTelemetry: <br> <em>Vigie suas APIs!</em></td>
                     <td>
                       <img
                         src="images/speakers/AndersonAragao.webp"
@@ -184,7 +184,7 @@
                   </tr>
                   <tr>
                     <td class="time">09:50</td>
-                    <td>Palestra A2</td>
+                    <td style="font-size: 14px;">A importância do <br> <em>Teste de Software <br> na garantia da qualidade e <br> confiabilidade</em> de sistemas</td>
                     <td>
                       <img
                         src="images/speakers/SandraRayane.webp"
@@ -196,7 +196,7 @@
                       <br />
                       Sandra Rayane
                     </td>
-                    <td>Palestra B2</td>
+                    <td style="font-size: 14px;">OJS: o projeto canadense para <br> <em>gestão de publicações cientificas</em> <br> que conquistou o Brasil</td>
                     <td>
                       <img
                         src="images/speakers/LiviaCarolina.webp"
@@ -211,7 +211,7 @@
                   </tr>
                   <tr>
                     <td class="time">10:40</td>
-                    <td>Palestra A3</td>
+                    <td style="font-size: 14px;">Lando para <br> desenvolvedores PHP</td>
                     <td>
                       <img
                         src="images/speakers/FernandoSantos.webp"
@@ -223,7 +223,7 @@
                       <br />
                       Fernando Santos
                     </td>
-                    <td>Palestra B3</td>
+                    <td style="font-size: 14px;">Arquitetura Orientada a <br> Eventos (EDA): <br> <em>Uma visão sistemática</em></td>
                     <td>
                       <img
                         src="images/speakers/EvaldoBarbosa.webp"
@@ -245,7 +245,7 @@
                   </tr>
                   <tr>
                     <td class="time">13:30</td>
-                    <td>Palestra A4</td>
+                    <td style="font-size: 14px;">Testes automatizados em API: <br> <em>usando Github Actions <br> e outras ferramentas</em></td>
                     <td>
                       <img
                         src="images/speakers/VitorMattos.webp"
@@ -257,22 +257,22 @@
                       <br />
                       Vitor Mattos
                     </td>
-                    <td>Palestra B4</td>
+                    <td style="font-size: 14px;">Explorando a Web: <br> <em>Construindo Crawlers eficientes <br> com Symfony</em></td>
                     <td>
                       <img
-                        src="images/speakers/AthosRibeiro.webp"
-                        title="Athos Ribeiro"
+                        src="images/speakers/DanielLima.webp"
+                        title="Daniel Lima"
                         alt="Palestrante 1"
                         width="80px"
                         id="img-speakers"
                       />
                       <br />
-                      Athos Ribeiro
+                      Daniel Lima
                     </td>
                   </tr>
                   <tr>
                     <td class="time">14:30</td>
-                    <td>Palestra A5</td>
+                    <td style="font-size: 14px;">LibreSign: <br> <em>Assinatura Eletrônica <br> com PHP</em></td>
                     <td>
                       <img
                         src="images/speakers/DaianeAlves.webp"
@@ -284,7 +284,7 @@
                       <br />
                       Daiane Alves
                     </td>
-                    <td>Palestra B5</td>
+                    <td style="font-size: 14px;">De suporte técnico a <br> desenvolvimento: <br> <em>Uma transição natural?</em></td>
                     <td>
                       <img
                         src="images/speakers/HelenaSaminez.webp"
@@ -299,7 +299,7 @@
                   </tr>
                   <tr>
                     <td class="time">15:10</td>
-                    <td>Palestra A6</td>
+                    <td style="font-size: 14px;">Esteganografia: <br> <em>A arte de ocultar uma mensagem <br> dentro de outra,</em> com PHP!</td>
                     <td>
                       <img
                         src="images/speakers/BrunoLopes.webp"
@@ -311,22 +311,22 @@
                       <br />
                       Bruno Lopes
                     </td>
-                    <td>Palestra B6</td>
+                    <td style="font-size: 14px;"><em>HTML limpo,</em> <br> um overview sobre <br> os 04 pilares</td>
                     <td>
                       <img
-                        src="images/speakers/VicenteMartins.webp"
-                        title="Vicente Martins"
-                        alt="Palestrante 1"
+                        src="images/speakers/engenheira.coelho.webp"
+                        title="Leticia Coelho"
+                        alt="Leticia Coelho"
                         width="80px"
                         id="img-speakers"
                       />
                       <br />
-                      Vicente Martins
+                      Leticia Coelho
                     </td>
                   </tr>
                   <tr>
                     <td class="time">16:00</td>
-                    <td class="center together" colspan="3">Coffee break</td>
+                    <td class="center together" colspan="3">Merenda</td>
                     <td class="together"></td>
                   </tr>
                   <tr>
@@ -345,7 +345,12 @@
                   </tr>
                   <tr>
                     <td class="time">17:30</td>
-                    <td class="center together" colspan="3">Mesa Redonda</td>
+                    <td class="center together" colspan="3">
+                      Mesa Redonda: <br> Como vai ficar o mercado de desenvolvimento daqui pra frente?
+                      <br> Convidados: Monica, Eduardo, Swoleo, Dennis Braga.
+                        <br> Mediador: Wil Correa.
+                    </td>
+                      
                     <td class="together"></td>
                   </tr>
                   <tr>
