--- a/index.html
+++ b/index.html
@@ -1117,13 +1117,13 @@
             <br /><br />
             <div class="row">
               <div class="col s12 m12 center hoverable p-3" id="card-sponsor">
-                <h5><span class="span-speaker">Patrocinador Ouro</span></h5>
+                <h5><span class="span-speaker">Patrocinador Diamante</span></h5>
                 <br />
                 <img
                   class="responsive-img"
-                  title="Logomarca da sua empresa aqui"
-                  alt="Logomarca da sua empresa aqui"
-                  src=""
+                  title="Logomarca da Accusense"
+                  alt="Logomarca da Accusense"
+                  src="images/sponsors/accusense.webp"
                   width="80%"
                 />
                 <div
@@ -1133,67 +1133,10 @@
                   <a
                     target="_blank"
                     style="margin-right: 50px"
-                    href="https://instagram.com/sua_empresa_aqui"
+                    href=""
                     >Instagram</a
                   >
-                  <a target="_blank" href="https://sua_empresa_aqui.com.br"
-                    >Website</a
-                  >
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
-                <h6>
-                  <span class="span-sponsor-silver">Patrocinador Prata</span>
-                </h6>
-                <br />
-                <img
-                  class="responsive-img"
-                  title="Logomarca da sua empresa aqui"
-                  alt="Logomarca da sua empresa aqui"
-                  src=""
-                  width="80%"
-                />
-                <div
-                  class="col l12 s12 brown-text"
-                  style="margin-top: 30px; margin-bottom: 30px"
-                >
-                  <a
-                    target="_blank"
-                    style="margin-right: 50px"
-                    href="https://instagram.com/sua_empresa_aqui"
-                    >Instagram</a
-                  >
-                  <a target="_blank" href="https://sua_empresa_aqui.com.br"
-                    >Website</a
-                  >
-                </div>
-              </div>
-
-              <div class="col s12 m6 center hoverable p-3" id="card-sponsor">
-                <h6>
-                  <span class="span-sponsor-silver">Patrocinador Prata</span>
-                </h6>
-                <br />
-                <img
-                  class="responsive-img"
-                  title="Logomarca da sua empresa aqui"
-                  alt="Logomarca da sua empresa aqui"
-                  src=""
-                  width="80%"
-                />
-                <div
-                  class="col l12 s12 brown-text"
-                  style="margin-top: 30px; margin-bottom: 30px"
-                >
-                  <a
-                    target="_blank"
-                    style="margin-right: 50px"
-                    href="https://instagram.com/sua_empresa_aqui"
-                    >Instagram</a
-                  >
-                  <a target="_blank" href="https://sua_empresa_aqui.com.br"
+                  <a target="_blank" href=""
                     >Website</a
                   >
                 </div>
