ajustando o tempo de palestra na sexta

--- a/agenda.html
+++ b/agenda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -270,7 +270,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="time">14:30</td>
+                    <td class="time">14:20</td>
                     <td>LibreSign: Assinatura Eletrônica com PHP</td>
                     <td>
                       <img
