--- a/index.html
+++ b/index.html
@@ -610,14 +610,14 @@
                 <div class="col s12 m12">
                   <img
                     class="responsive-img"
-                    src="images/speakers/VicenteMartins.webp"
+                    src="images/speakers/DanielLima.jpg"
                     title="Foto do palestrante arretado Vicente Martins"
                     alt="Foto do palestrante arretado Vicente Martins"
                     id="img-speakers"
                   />
                   <div class="speaker-info">
-                    <p class="speaker-name">Vicente Martins</p>
-                    <p class="speaker-location">João Pessoa - PB</p>
+                    <p class="speaker-name">Daniel Lima</p>
+                    <p class="speaker-location">Russas - CE</p>
                   </div>
                 </div>
               </div>
@@ -694,14 +694,14 @@
                 <div class="col s12 m12">
                   <img
                     class="responsive-img"
-                    src="images/speakers/AthosRibeiro.webp"
+                    src="images/speakers/engenheira.coelho.webp"
                     title="Foto do palestrante invocado Athos Ribeiro"
                     alt="Foto do palestrante invocado Athos Ribeiro"
                     id="img-speakers"
                   />
                   <div class="speaker-info">
-                    <p class="speaker-name">Athos Ribeiro</p>
-                    <p class="speaker-location">Marechal Deodoro - AL</p>
+                    <p class="speaker-name">Leticia Coelho</p>
+                    <p class="speaker-location">Florianópolis - SC</p>
                   </div>
                 </div>
               </div>
