--- a/agenda.html
+++ b/agenda.html
@@ -89,7 +89,9 @@
                 <div id="time-1" class="col s12 z-depth-1">
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
+                        Auditorio
+                        <Br>
                           <img
                           class="responsive-img"
                           src="images/speakers/engenheira.coelho.webp"
@@ -103,11 +105,14 @@
                         <h6>Integração de serviços de IA.
                           5 etapas para identificar e implementar integração com
                           AIaaS</h6>
+
+                        <hr>
                       </div>
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
+                        sala 01 <br>
                         <img
                         src="images/speakers/IngriddosSantos.webp"
                         title="Ingrid dos Santos"
@@ -118,11 +123,13 @@
                         <p class="speaker-name" style="font-size: 22px;">Ingrid Santos</p>
                         <p class="speaker-location">Fortaleza-CE</p>
                         <h6>Como conquistar sua primeira vaga de TI, pela visão de uma Tech recruiter</h6>
+                        <hr>
                       </div>
                     </div>
 
                     <div class="col s12 m4 l4">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
+                        sala 02<br>
                         <img
                           class="responsive-img"
                           src="images/speakers/RosanaMarques.webp"
@@ -141,7 +148,8 @@
                 <div id="time-2" class="col s12 z-depth-1">
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
+                        Auditorio <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/ElenaGiuli.webp"
@@ -153,11 +161,13 @@
                         <p class="speaker-name" style="font-size: 22px;">Elena Giuli</p>
                         <p class="speaker-location">São Paulo-SP</p>
                         <h6>Como começar a implementar AiOps (Inteligência Artificial em Operações de T.I.) na prática?</h6>
+                        <hr>
                       </div>
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
+                        Sala 01 <br>
                           <img
                           class="responsive-img"
                           src="images/speakers/YanVancelis.webp"
@@ -169,11 +179,12 @@
                         <p class="speaker-name" style="font-size: 22px;">Yan Vancelis</p>
                         <p class="speaker-location">Russas-CE</p>
                         <h6>PHPé de uéx: O melhor ritmo para deixar nossos produtos só o mi</h6>
+                        <hr>
                       </div>
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                         <img
                         src="images/speakers/HilderjaresMartins.webp"
                         title="Ingrid dos Santos"
@@ -199,7 +210,7 @@
                 <div id="time-4" class="col s12 z-depth-1">
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                           <img
                           class="responsive-img"
                           src="images/speakers/LeoCavalcante.webp"
@@ -215,7 +226,7 @@
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                           <img
                           class="responsive-img"
                           src="images/speakers/DouglasMedeiros.webp"
@@ -231,7 +242,7 @@
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                         <img
                         src="images/speakers/DiegoBorges.webp"
                         title="Ingrid dos Santos"
@@ -249,7 +260,7 @@
                 <div id="time-5" class="col s12 z-depth-1">
                   <div class="row center-align" style="margin-top: 40px;">
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                           <img
                           class="responsive-img"
                           src="images/speakers/ViniciusDias.webp"
@@ -265,7 +276,7 @@
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                           <img
                           class="responsive-img"
                           src="images/speakers/ViniciusCampitelli.webp"
@@ -281,7 +292,7 @@
                     </div>
 
                     <div class="col s12 m4 l4" style="margin-bottom: 50px;">
-                      <div class="col s12 m4 offset-m3">
+                      <div class="col s12 m6 offset-m3">
                         <img
                         src="images/speakers/LeoCarmo.webp"
                         title="Ingrid dos Santos"
